# anhnm-claude-marketplace

./: .gitignore  README.md  package-lock.json  package.json
.claude-plugin/: marketplace.json
.github/workflows/: validate-plugins.yml
.husky/: commit-msg  pre-commit
command/: auto-sprint-dash.md  auto-sprint.md  auto-story-dash.md  auto-story.md
plugins/: README.md
plugins/.claude-plugin/: plugin.json
plugins/brainstorm-debate/.claude-plugin/: plugin.json
plugins/developer-toolkit/.claude-plugin/: plugin.json
plugins/developer-toolkit/agents/: greeter.md
plugins/developer-toolkit/hooks/: hooks.json
plugins/hello-world/: CHANGELOG.md
plugins/hello-world/commands/: greet.md
plugins/hello-world/skills/orchestrate/orchestrator/: __init__.py  __main__.py  pyproject.toml
plugins/hello-world/skills/orchestrate/orchestrator/models/: story.py
plugins/hello-world/skills/orchestrate/orchestrator/storage/: __init__.py  sprint_storage.py
plugins/java-developer/.claude-plugin/: plugin.json
plugins/learning-accelerator/.claude-plugin/: plugin.json
plugins/skills/orchestrate-auto-dev/: STORY-ID-FORMAT.md  default.config.yaml  requirements.txt  run.bat  run.sh  skill.md
plugins/skills/orchestrate-dev/: default.config.yaml
plugins/skills/orchestrate-dev-test/: default.config.yaml
plugins/skills/orchestrate-integrate/: default.config.yaml
plugins/skills/orchestrate-prepare/: default.config.yaml
plugins/skills/orchestrate-test-design/: default.config.yaml
scripts/: lint-json.js  new-plugin.js  validate.js  version.js
(+68 files in other folders)
