[project]
name = "orchestrator"
version = "0.1.0"
description = "AI Development Orchestration System - BMAD Parallelizer"
requires-python = ">=3.11"

dependencies = [
    # CLI & Dashboard
    "rich>=13.0",           # Beautiful terminal output
    "typer>=0.9",           # CLI framework

    # Data & Validation
    "pydantic>=2.0",        # Data models with validation

    # File handling
    "pyyaml>=6.0",          # YAML config files
    "aiofiles>=23.0",       # Async file operations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
